# stephane_hambert_backend

./: .gitignore  build.sh  db.sqlite3  example.crt  exemple.key  products.sql  pyproject.toml  render.yaml  requirements.txt  test.py
auth_module/: apps.py  services.py  tests.py  views.py
backend/: settings.py  urls.py
chat/: models.py
cms/: apps.py  models.py
common/: repositories.py  services.py  views.py
crm/: models.py  services.py  tests.py  views.py
crm/migrations/: 0001_initial.py  0002_remove_customerprofile_factor_auth_method_and_more.py  0005_customerprofile_gender.py
ecommerce/: models.py  service.py  views.py
ecommerce/migrations/: 0001_initial.py
generalsettings/: apps.py  models.py
newsletter/: models.py  services.py  views.py
newsletter/migrations/: 0001_initial.py
stock_management/: models.py  services.py  views.py
stock_management/migrations/: 0001_initial.py  0002_remove_product_brand_product_code.py  0002_rename_description_collection_content.py  0003_product_promo.py  0003_rename_label_promo_title_alter_product_category_set.py
store_management/: models.py  services.py  views.py
store_management/migrations/: 0001_initial.py
templates/: product-notify.html
website/: models.py  services.py  views.py
website/migrations/: 0001_initial.py  0002_rename_description_additionalinformationcollection_content.py  0003_rename_description_history_content_and_more.py  0004_notification.py
